# MADAIWorkbench

./: BuildInstallerOnLinux.sh  BuildInstallerOnMacOSX.sh  CMakeLists.txt  InstallPreqrequisitesUbuntu.sh  InstallPrerequisitesFedora.sh  License_v1.0.txt  README-SpaceNavigator.txt  README.txt  SetParaViewVersion.sh
Application/: CMakeLists.txt  CompleteBundle.cmake.in  CopyPVApplications.sh  CopyPVPlugins.sh  CopyPython.sh  CreateBundle.sh.in  Icons.qrc  MADAIWorkbenchMainWindow.cxx  MADAIWorkbenchMainWindow.ui  MacIcon.icns
CMake/: FindUSB1.cmake  GetCMakeCacheValue.cmake
Macros/: Banded Levels Colormap.py  Calculate Difference.py
Plugins/: CMakeLists.txt
Plugins/BinningFilter/: BinningFilter.xml  BinningFilterGUI.xml  CMakeLists.txt  README.txt  plugin.cmake  vtkBinningFilter.cxx  vtkBinningFilter.h
Plugins/BooleanOperationFilter/: BooleanOperation.xml
Plugins/EnsembleSurfaceSlicing/: CMakeLists.txt  EnsembleSurfaceSlicing.xml  plugin.cmake  pqEnsembleSurfaceSlicingDecorator.cxx  pqEnsembleSurfaceSlicingDecorator.h  pqEnsembleSurfaceSlicingDecorator.ui  vtkEnsembleSurfaceSlicingActor.cxx  vtkEnsembleSurfaceSlicingActor.h  vtkEnsembleSurfaceSlicingPolyDataMapper.cxx  vtkEnsembleSurfaceSlicingPolyDataMapper.h  vtkEnsembleSurfaceSlicingRepresentation.cxx  vtkEnsembleSurfaceSlicingRepresentation.h
Plugins/GaussianScalarSplatter/: CMakeLists.txt  GaussianScalarSplatter.xml  GaussianScalarSplatterGUI.xml  README.txt  plugin.cmake  vtkGaussianScalarSplatter.cxx  vtkGaussianScalarSplatter.h
Plugins/GaussianScalarSplatter/applications/: README.txt
Plugins/GaussianScalarSplatter/splat/: CMakeLists.txt  build.sh  splat.cxx
Plugins/Logo/: CMakeLists.txt  LogoTextSource.xml  pqLogoStarter.cxx  pqLogoStarter.h
Plugins/MADAILogoTextSource/: CMakeLists.txt  plugin.cmake  pqMADAILogoTextSourceStarter.cxx  pqMADAILogoTextSourceStarter.h
Plugins/MaskTableRows/: CMakeLists.txt  MaskTableRows.xml  MaskTableRowsGUI.xml  plugin.cmake  vtkMaskTableRows.cxx  vtkMaskTableRows.h
Plugins/MaximizeNormalizedShapeIndexProjectionFilter/: CMakeLists.txt  MaximizeNormalizedShapeIndexProjectionFilter.xml  MaximizeNormalizedShapeIndexProjectionFilterGUI.xml  plugin.cmake  vtkMaximizeNormalizedShapeIndexProjectionFilter.cxx  vtkMaximizeNormalizedShapeIndexProjectionFilter.h
Plugins/MaximizeSquaredGaussianCurvatureProjectionFilter/: CMakeLists.txt  MaximizeSquaredGaussianCurvatureProjectionFilter.xml  MaximizeSquaredGaussianCurvatureProjectionFilterGUI.xml  plugin.cmake-disabled  vtkMaximizeSquaredGaussianCurvatureProjectionFilter.cxx  vtkMaximizeSquaredGaussianCurvatureProjectionFilter.h
Plugins/PercentileSurfaceFilter/: CMakeLists.txt  PercentileSurfaceFilter.xml  PercentileSurfaceFilterGUI.xml  plugin.cmake  vtkPercentileSurfaceFilter.cxx  vtkPercentileSurfaceFilter.h
Plugins/PolyDataDistanceFilter/: CMakeLists.txt  PolyDataDistanceFilter.xml  PolyDataDistanceFilterGUI.xml  plugin.cmake
Plugins/RemoveLargeTetrahedraFilter/: CMakeLists.txt  RemoveLargeTetrahedraFilter.xml  RemoveLargeTetrahedraFilterGUI.xml  plugin.cmake  vtkRemoveLargeTetrahedraFilter.cxx  vtkRemoveLargeTetrahedraFilter.h
Plugins/RescalePointsFilter/: CMakeLists.txt  RescalePointsFilter.xml  RescalePointsFilterGUI.xml  plugin.cmake  vtkRescalePointsFilter.cxx  vtkRescalePointsFilter.h
Plugins/ThresholdPointsFilter/: CMakeLists.txt  ThresholdPoints.xml  ThresholdPointsGUI.xml  plugin.cmake
Plugins/VRPNClient/: CMakeLists.txt  pqVRPNClientStarter.cxx  pqVRPNClientStarter.h  vtkVRPNClient.cxx  vtkVRPNClient.h
Plugins/VRPNDevices/: CMakeLists.txt  plugin.cmake  pqVRPNClientServerStarter.cxx  pqVRPNClientServerStarter.h  pqVRPNServerStarter.cxx  pqVRPNServerStarter.h  vrpn_server.cxx  vtkVRPNClient.cxx  vtkVRPNClient.h  vtkVRPNServer.cxx  vtkVRPNServer.h
Plugins/VRPNServer/: CMakeLists.txt  plugin.cmake  pqVRPNServerStarter.cxx  pqVRPNServerStarter.h  vtkVRPNServer.cxx  vtkVRPNServer.h
Plugins/VectorComparison/: CMakeLists.txt  VectorComparisonGlyphFilter.xml  VectorComparisonGlyphFilterGUI.xml  plugin.cmake  vtkVectorComparisonGlyphFilter.cxx  vtkVectorComparisonGlyphFilter.h
Plugins/XMLPlugins/: BooleanOperation.xml  BooleanOperationGUI.xml  CMakeLists.txt  plugin.cmake
Tutorial/: .gitignore  MADAIWorkbenchTutorial.bib  MADAIWorkbenchTutorial.tex
scripts/: MADAIWorkbench.in  MADAIWorkbenchServer.in
